--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -4,7 +4,9 @@
       <mat-icon>menu</mat-icon>
     </button>
   </div>
-  <div>
-    <p>LOGO</p>
+  <div class="logo-container">
+    <div fxLayout="column" fxLayoutAlign="center center">
+      <img class="logo" src="assets/images/logo.png">
+    </div>
   </div>
 </mat-toolbar>
