--- a/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -1,19 +1,19 @@
 <mat-nav-list class="sidenav-list">
 
-  <a mat-list-item routerLink="/signin"> <mat-icon>input</mat-icon>
+  <a mat-list-item routerLink="/signin" (click)="onToggleClose()"> <mat-icon>input</mat-icon>
   <span>Signin</span>
   </a>
 
-  <a mat-list-item routerLink="/signup"> <mat-icon>account_circle</mat-icon>
+  <a mat-list-item routerLink="/signup" (click)="onToggleClose()"> <mat-icon>account_circle</mat-icon>
     <span>Signup</span>
   </a>
 
 
-  <a mat-list-item routerLink="/accommodation"> <mat-icon>hotel</mat-icon>
+  <a mat-list-item routerLink="/accommodation" (click)="onToggleClose()" > <mat-icon>hotel</mat-icon>
     <span>Accommodation</span>
   </a>
 
-  <a mat-list-item routerLink="/offers"> <mat-icon>loyalty</mat-icon>
+  <a mat-list-item routerLink="/offers" (click)="onToggleClose()" > <mat-icon>loyalty</mat-icon>
     <span>Offers</span>
   </a>
 
