--- a/src/app/navigation/navtabs/navtabs.component.html
+++ b/src/app/navigation/navtabs/navtabs.component.html
@@ -1,6 +1,7 @@
-<nav mat-tab-nav-bar>
+<div class="navtabs-container">
+<nav mat-tab-nav-bar >
   <span class="toolbar-flex"></span>
-  <mat-tab-group>
+  <mat-tab-group >
     <mat-tab label="Hello 1"> </mat-tab>
     <mat-tab label="Hello 2"> </mat-tab>
     <mat-tab label="Hello 3"></mat-tab>
@@ -10,3 +11,4 @@
   </mat-tab-group>
   <span class="toolbar-flex"></span>
 </nav>
+</div>
