--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+/*
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+*/
 html {
   height: 100%;
 }
@@ -9,3 +11,4 @@ body {
   height: 100%;
   margin: 0;
 }
+
